force-app/main/default/objects/FormaPagamento__c/FormaPagamento__c.object-meta.xml
<CustomObject>
    <label>Forma de Pagamento</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Formas de Pagamento</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>