force-app/main/default/objects/FormaPagamento__c/fields/CodigoFormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>CodigoFormaPagamento__c</fullName>
    <externalId>true</externalId>
    <label>Código da Forma de Pagamento</label>
    <length>5</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>