force-app/main/default/objects/FormaPagamento__c/fields/Descricao__c.field-meta.xml
<CustomField>
    <fullName>Descricao__c</fullName>
    <label>Descricao</label>
    <length>100</length>
    <type>Text</type>
</CustomField>