force-app/main/default/objects/FormaPagamento__c/fields/PrazoMaximoFormaPagamento__c.field-meta.xml
<CustomField>
    <fullName>PrazoMaximoFormaPagamento__c</fullName>
    <label>Prazo Máximo para Forma de Pagamento</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>